build: add /MP for msvc

--- a/src/cmake.toml
+++ b/src/cmake.toml
@@ -4,15 +4,10 @@ compile-features = ["cxx_std_23"]
 compile-definitions = ["NOMINMAX"]
 unix.compile-options = [
     "-stdlib=libc++",
-    # "-Wall",
-    # "-Wextra",
-    # "-Wpedantic",
-    # "-Wno-nested-anon-types",
-    # "-Wno-gnu-anonymous-struct",
-    # "-Wno-unused-function",
+    # "-Wall", "-Wextra", "-Wpedantic", "-Wno-nested-anon-types", "-Wno-gnu-anonymous-struct", "-Wno-unused-function",
 ]
 unix.link-options = ["-fuse-ld=lld", "-Wl,-L/usr/local/lib/"]
-msvc.compile-options = ["/wd4661"]
+msvc.compile-options = ["/wd4661", "/MP"]
 
 
 [target.obfuscator-lib]
