--- a/src/cmake.toml
+++ b/src/cmake.toml
@@ -2,20 +2,26 @@
 type = "executable"
 compile-features = ["cxx_std_23"]
 compile-definitions = ["NOMINMAX"]
-unix.compile-options = [
-    "-stdlib=libc++",
-    # "-Wall", "-Wextra", "-Wpedantic", "-Wno-nested-anon-types", "-Wno-gnu-anonymous-struct", "-Wno-unused-function",
-]
+unix.compile-options = ["-stdlib=libc++"]
+unix.link-options = ["-fuse-ld=lld", "-Wl,-L/usr/local/lib/"]
+msvc.compile-options = ["/wd4661", "/MP"]
+
+
+# Shamelessly copying stuff because there's no way to use a template with different types :/
+[template.obfuscator-library]
+type = "library"
+compile-features = ["cxx_std_23"]
+compile-definitions = ["NOMINMAX"]
+unix.compile-options = ["-stdlib=libc++"]
 unix.link-options = ["-fuse-ld=lld", "-Wl,-L/usr/local/lib/"]
 msvc.compile-options = ["/wd4661", "/MP"]
 
 
 [target.obfuscator-lib]
 alias = "obfuscator::lib"
-type = "interface"
-compile-features = ["cxx_std_23"]
+type = "obfuscator-library"
 include-directories = ["lib/"]
-sources = ["lib/**.cpp", "lib/**.hpp"]
+sources = ["lib/**.cpp"]
 link-libraries = [
     "zasm",
     "linux-pe",
@@ -25,7 +31,7 @@ link-libraries = [
 
 [target.obfuscator]
 type = "obfuscator-executable"
-sources = ["bin/**.cpp", "bin/**.hpp"]
+sources = ["bin/**.cpp"]
 include-directories = ["bin/"]
 link-libraries = ["obfuscator::lib"]
 
@@ -33,7 +39,7 @@ link-libraries = ["obfuscator::lib"]
 [target.obfuscator-tests]
 condition = "build-tests"
 type = "obfuscator-executable"
-sources = ["tests/**.cpp", "tests/**.hpp"]
+sources = ["tests/**.cpp"]
 include-directories = ["tests/"]
 link-libraries = ["obfuscator::lib", "GTest::gtest_main"]
 cmake-after = """
